# game-on-sfml

./: .gitignore  CMakeLists.txt  Game.cpp  Game.h  Internal_menu.cpp  Internal_menu.h  Map.cpp  Map.h  Menu.cpp  Menu.h  Player.cpp  Player.h  README.md  cute cat.sln  cute cat.vcxproj  cute cat.vcxproj.filters  main.cpp  settings.cpp
include/: Game.h  settings.h
source/: Game.cpp  Internal_menu.cpp  Menu.cpp  Player.cpp  settings.cpp
